# wardline

./: .coverage  .filigree.conf  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  404.html  AGENTS.md  AUDIT.md  CHANGELOG.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  SECURITY.md  UPGRADING.md  index.html  loomweave.yaml  mkdocs.yml  pyproject.toml  sitemap.xml  wardline-readonly-audit-2026-06-04-subagent-synthesis.md  wardline-readonly-audit-2026-06-04.md  wardline.compliance.json  wardline.conformance.json  wardline.exceptions.json  wardline.fingerprint.json  wardline.manifest.baseline.json  wardline.sarif.baseline.json  wardline.toml  wardline.yaml
.claude/: settings.json
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: benchmark.yml  ci.yml  corpus.yml  deploy-site.yml  docs.yml  package-split.yml  release.yml
.jules/: bolt.md  sentinel.md
concepts/model/: index.html
concepts/rules/: index.html
concepts/taint-algebra/: index.html
concepts/trust-vocabulary-convergence/: index.html
corpus/: corpus_manifest.json
docs/: README.md  agents.md  getting-started.md  index.md  specification.md
docs/adr/: ADR-003-split-rule-matrix-independence.md  ADR-004-elspeth-enhancements.md  ADR-005-bootstrap-assurance-reference.md
docs/arch-analysis-2026-06-10/: 05-quality-assessment.md
docs/arch-analysis-2026-06-28-0749/: 00-coordination.md  01-discovery-findings.md  02-subsystem-catalog.md  03-diagrams.md  04-final-report.md  05-quality-assessment.md  06-architect-handover.md
docs/audits/: 2026-05-31-taint-combination-audit.md  2026-06-08-comprehensive-audit.md
docs/bitbucket/: README.md
docs/concepts/: model.md  rules.md  taint-algebra.md  trust-vocabulary-convergence.md
docs/contracts/: wardline-attest-2-consumer-prompt.md  wardline-attest-2.md
docs/decisions/: 2026-05-31-wardline-taint-lattice-retain.md  2026-06-02-wardline-hash-granularity-two-model.md  2026-06-05-wardline-finding-identity-frozen-contract.md  2026-06-05-wardline-native-module-import-resolution.md  2026-06-05-wardline-vocabulary-descriptor-cross-product-contract.md
docs/design/: l2-parameter-taint.md
docs/governance/: README.md  bar-review-pipeline.md
docs/guides/: agents.md  analysis-levels.md  assurance-posture.md  attestation.md  ci-integration.md  clarion-taint-store.md  configuration.md  governance.md  judge.md  legis-handoff.md  loom.md  loomweave-taint-store.md  profiles.md  rust-preview.md  suppression.md  weft.md
docs/integration/: 2026-05-29-wardline-loom-integration-brief.md  2026-05-29-wardline-weft-integration-brief.md  2026-05-30-wardline-clarion-taint-store-requirements.md  2026-05-30-wardline-loomweave-taint-store-requirements.md  2026-06-02-wardline-roots-for-clarion-dead-code.md  2026-06-02-wardline-roots-for-loomweave-dead-code.md  2026-06-05-wardline-descriptor-clarion-handoff.md  2026-06-05-wardline-descriptor-loomweave-handoff.md  2026-06-05-wardline-loomweave-weft-rename.md  2026-06-09-loomweave-rust-qualname-dialect-reply.md  2026-06-09-loomweave-rust-qualname-phase1b-changeset.md  2026-06-10-wardline-loomweave-rust-qualname-amendment-requests.md  2026-06-11-wardline-resolve-plugin-hint-proposal.md
docs/javascripts/: severity-matrix.js
docs/notes/: improvements.md
docs/plans/: 2026-04-12-bar-runner.md  2026-06-28-weft-seam-crit3-ci-drift.md  workstream-b-corpus-verification-upgrade.md
docs/product/: PRD-0001-codex-p1-closeout.md  PRD-0002-weft-seam-conformance.md  codex-triage-2026-06-22.md  current-state.md  metrics.md  q4-framework-auto-inference-examination.md  roadmap.md  vision.md
docs/prompts/: verity.md
docs/reference/: cli.md  error-messages.md  finding-lifecycle-vocabulary.md  glossary.md  index.md  manifest.md  mcp.md  rules.md  sarif-format.md  severity-matrix.md  supplementary-groups.md  taint-states.md  vocabulary.md
docs/spec/: wardline-01-00-front-matter.md  wardline-01-01-document-scope.md  wardline-01-02-what-a-wardline-is.md  wardline-01-03-the-problem-a-wardline-solves.md  wardline-01-04-non-goals.md  wardline-01-05-authority-tier-model.md  wardline-01-06-authority-tier-enforcement-spec.md  wardline-01-07-annotation-vocabulary.md  wardline-01-07-pattern-rules.md  wardline-01-08-enforcement-layers.md  wardline-01-08-pattern-rules.md  wardline-01-09-enforcement-layers.md  wardline-01-10-governance-model.md  wardline-01-10-verification-properties.md  wardline-01-11-verification-properties.md  wardline-01-12-language-evaluation-criteria.md  wardline-01-13-portability-and-manifest-format.md  wardline-01-13-residual-risks.md  wardline-01-14-conformance.md  wardline-01-14-portability-and-manifest-format.md  wardline-01-15-conformance.md  wardline-01-15-document-scope.md  wardline-02-00-front-matter.md  wardline-02-A-python-binding.md  wardline-02-B-java-binding.md  wardline-lite.md
docs/stylesheets/: custom.css  extra.css  severity-matrix.css
docs/verification/: 2026-04-12-v1-0-cell-certification-matrix.md  2026-04-12-v1-0-compliance-ledger.md  2026-04-12-v1-0-regime-verify.json  2026-04-12-v1-0-roadmap-to-ship.md  2026-04-12-v1-0-worked-example-coherence.json  rename-migration-manifest.md  v1.0-review-prompt.md
getting-started/: index.html
guides/agents/: index.html
guides/assurance-posture/: index.html
guides/attestation/: index.html
guides/configuration/: index.html
guides/judge/: index.html
guides/legis-handoff/: index.html
guides/loomweave-taint-store/: index.html
guides/suppression/: index.html
overrides/: home.html  main.html
scripts/: coverage_check.py  generate_corpus.py  migrate_expected_match.py
search/: search_index.json
site/: .gitignore  astro.config.mjs  package-lock.json  package.json
site-src/: adr  audits  getting-started.md  index.md  requirements  spec  specification.md  verification
stylesheets/: extra.css
tests/: conftest.py  test_self_hosting.py  test_self_hosting_violation.py
www/: README.md  index.html  main.js  styles.css
(+1370 files in other folders)
