[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wardline"
description = "Generic semantic-tainting static analyzer for Python"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = []
authors = [{ name = "John Morrissey" }]
keywords = ["static-analysis", "taint-analysis", "trust-boundaries", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[project.optional-dependencies]
scanner = ["pyyaml>=6.0", "jsonschema>=4.0", "click>=8.0"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5"]
clarion = ["blake3>=1.0"]
# The SP5 LLM triage judge is dependency-free (stdlib urllib -> OpenRouter); no extra needed.

[dependency-groups]
# Tooling only. Runtime deps live in the extras above; `uv sync --all-extras
# --group dev` installs base + scanner + clarion + docs + this group, which is
# the canonical dev sync used by the Makefile, CI, and CONTRIBUTING.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-randomly",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-PyYAML",
    "types-jsonschema",
    "hypothesis",
]

[project.scripts]
wardline = "wardline.cli.main:cli"

[project.urls]
Homepage = "https://github.com/foundryside-dev/wardline"
Repository = "https://github.com/foundryside-dev/wardline"
Issues = "https://github.com/foundryside-dev/wardline/issues"
Changelog = "https://github.com/foundryside-dev/wardline/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/wardline/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/wardline"]

[tool.hatch.build.targets.wheel.force-include]
"src/wardline/scanner/taint/stdlib_taint.yaml" = "wardline/scanner/taint/stdlib_taint.yaml"
"src/wardline/core/vocabulary.yaml" = "wardline/core/vocabulary.yaml"
"src/wardline/skills/wardline-gate/SKILL.md" = "wardline/skills/wardline-gate/SKILL.md"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/wardline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not network and not clarion_e2e and not legis_e2e and not filigree_e2e'"
markers = [
    "network: tests that need network (live OpenRouter judge e2e — SP5)",
    "clarion_e2e: tests that need a real `clarion serve` binary (SP9 round-trip)",
    "legis_e2e: tests that need a real `legis` server (Track 5 intake round-trip)",
    "filigree_e2e: tests that need a real Filigree with the promote route (WS-A2 round-trip)",
]

[tool.coverage.run]
source = ["wardline"]
branch = true

[tool.coverage.report]
show_missing = true
