[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wardline"
description = "Generic semantic-tainting static analyzer for Python"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = []
authors = [{ name = "John Morrissey" }]
keywords = ["static-analysis", "taint-analysis", "trust-boundaries", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[project.optional-dependencies]
scanner = ["pyyaml>=6.0", "jsonschema>=4.0", "click>=8.0"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5"]
loomweave = ["blake3>=1.0"]
# Rust frontend (preview, Tier-A command-injection). tree-sitter-rust 0.24.2's
# parser is ABI 15, loadable only by tree-sitter core >=0.25.0 — do NOT trust the
# grammar's stale self-declared `tree-sitter~=0.22`. Both ship cp39-abi3 stable-ABI
# wheels (one wheel per platform, CPython 3.9+, no compiler at install). The <0.26
# cap is conservative: 0.26.x ABI/API compat is unverified — relax after a smoke test.
# The frontend plugs into the scanner pipeline (run_scan, the `--lang rust` click CLI)
# and loads rust_taint.yaml, so it pulls `wardline[scanner]` (pyyaml/click/jsonschema):
# `pip install wardline[rust]` is then usable standalone, not merely additive to [scanner].
rust = ["wardline[scanner]", "tree-sitter>=0.25,<0.26", "tree-sitter-rust==0.24.2"]
# The SP5 LLM triage judge is dependency-free (stdlib urllib -> OpenRouter); no extra needed.

[dependency-groups]
# Tooling only. Runtime deps live in the extras above; `uv sync --all-extras
# --group dev` installs base + scanner + loomweave + docs + this group, which is
# the canonical dev sync used by the Makefile, CI, and CONTRIBUTING.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-randomly",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-PyYAML",
    "types-jsonschema",
    "hypothesis",
]

[project.scripts]
wardline = "wardline.cli.entrypoint:main"

[project.urls]
Homepage = "https://github.com/foundryside-dev/wardline"
Repository = "https://github.com/foundryside-dev/wardline"
Issues = "https://github.com/foundryside-dev/wardline/issues"
Changelog = "https://github.com/foundryside-dev/wardline/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/wardline/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/wardline"]

[tool.hatch.build.targets.wheel.force-include]
"src/wardline/scanner/taint/stdlib_taint.yaml" = "wardline/scanner/taint/stdlib_taint.yaml"
"src/wardline/core/vocabulary.yaml" = "wardline/core/vocabulary.yaml"
"src/wardline/rust/rust_taint.yaml" = "wardline/rust/rust_taint.yaml"
"src/wardline/skills/wardline-gate/SKILL.md" = "wardline/skills/wardline-gate/SKILL.md"

[tool.ruff]
line-length = 120
target-version = "py312"
# Frozen identity-oracle fixtures are parsed-not-imported corpus inputs; never
# let lint/format rewrite them (that would silently drift the golden corpus).
extend-exclude = ["tests/golden/identity/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/wardline", "tests"]
exclude = [
    '^tests/grammar/fixtures/',
    '^tests/unit/install/mock_pack/',
    '^tests/golden/identity/fixtures/',
]
mypy_path = ["src", "."]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "tests",
    "tests.*",
]
check_untyped_defs = false
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
warn_return_any = false
warn_unused_ignores = false
disable_error_code = [
    "index",
    "operator",
    "type-arg",
    "attr-defined",
    "no-any-return",
    "assignment",
    "arg-type",
    "override",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not network and not loomweave_e2e and not legis_e2e and not filigree_e2e and not rust_e2e'"
markers = [
    "network: tests that need network (live OpenRouter judge e2e — SP5)",
    "loomweave_e2e: tests that need a real `loomweave serve` binary (SP9 round-trip)",
    "legis_e2e: tests that need a real `legis` server (Track 5 intake round-trip)",
    "filigree_e2e: tests that need a real Filigree with the promote route (WS-A2 round-trip)",
    "rust_e2e: live `wardline scan --lang rust` CLI subprocess over the .rs corpus (WP6)",
]

[tool.coverage.run]
source = ["wardline"]
branch = true

[tool.coverage.report]
show_missing = true
