[build-system]
requires = ["hatchling==1.30.1"]
build-backend = "hatchling.build"

[project]
name = "wardline"
description = "Generic semantic-tainting static analyzer for Python"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = []
authors = [{ name = "John Morrissey" }]
keywords = ["static-analysis", "taint-analysis", "trust-boundaries", "security"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[project.optional-dependencies]
scanner = ["pyyaml>=6.0", "jsonschema>=4.0", "click>=8.0"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5"]
loomweave = ["blake3>=1.0"]
# Rust frontend (preview, Tier-A command-injection). tree-sitter-rust 0.24.2's
# parser is ABI 15, loadable only by tree-sitter core >=0.25.0 — do NOT trust the
# grammar's stale self-declared `tree-sitter~=0.22`. Both ship cp39-abi3 stable-ABI
# wheels (one wheel per platform, CPython 3.9+, no compiler at install). The <0.26
# cap is conservative: 0.26.x ABI/API compat is unverified — relax after a smoke test.
# The frontend plugs into the scanner pipeline (run_scan, the `--lang rust` click CLI)
# and loads rust_taint.yaml, so it pulls `wardline[scanner]` (pyyaml/click/jsonschema):
# `pip install wardline[rust]` is then usable standalone, not merely additive to [scanner].
rust = ["wardline[scanner]", "tree-sitter>=0.25,<0.26", "tree-sitter-rust==0.24.2"]
# The SP5 LLM triage judge is dependency-free (stdlib urllib -> OpenRouter); no extra needed.

[dependency-groups]
# Tooling only. Runtime deps live in the extras above; `uv sync --all-extras
# --group dev` installs base + scanner + loomweave + docs + this group, which is
# the canonical dev sync used by the Makefile, CI, and CONTRIBUTING.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-randomly",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-PyYAML",
    "types-jsonschema",
    "hypothesis",
    "import-linter>=2.0",
]

[project.scripts]
wardline = "wardline.cli.entrypoint:main"

[project.urls]
Homepage = "https://github.com/foundryside-dev/wardline"
Repository = "https://github.com/foundryside-dev/wardline"
Issues = "https://github.com/foundryside-dev/wardline/issues"
Changelog = "https://github.com/foundryside-dev/wardline/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/wardline/_version.py"

# Constrain the source distribution to the package, its test suite, and the
# canonical metadata. Without an explicit sdist target hatchling ships every
# non-VCS-ignored path in the repo root (docs/, site/, www/, packages/,
# overrides/, internal audits, uv.lock) — fine for the working tree, wrong for
# a published v1.0 artifact.
[tool.hatch.build.targets.sdist]
# Leading slash anchors each pattern to the repo root — an unanchored
# "README.md"/"pyproject.toml" would also match those filenames nested under
# docs/, packages/, www/ and pull those trees in.
include = [
    "/src/wardline",
    "/tests",
    "/README.md",
    "/CHANGELOG.md",
    "/UPGRADING.md",
    "/CONTRIBUTING.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wardline"]

[tool.hatch.build.targets.wheel.force-include]
"src/wardline/scanner/taint/stdlib_taint.yaml" = "wardline/scanner/taint/stdlib_taint.yaml"
"src/wardline/core/vocabulary.yaml" = "wardline/core/vocabulary.yaml"
"src/wardline/rust/rust_taint.yaml" = "wardline/rust/rust_taint.yaml"
"src/wardline/skills/wardline-gate/SKILL.md" = "wardline/skills/wardline-gate/SKILL.md"

[tool.ruff]
line-length = 120
target-version = "py312"
# Frozen identity-oracle fixtures and the warpline-delta sample tree are
# parsed-not-imported corpus inputs; never let lint/format rewrite them (that
# would silently drift the golden corpus).
extend-exclude = [
    "tests/golden/identity/fixtures",
    "tests/conformance/fixtures/warpline_delta",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/wardline", "tests"]
exclude = [
    '^tests/grammar/fixtures/',
    '^tests/unit/install/mock_pack/',
    '^tests/golden/identity/fixtures/',
    '^tests/conformance/fixtures/warpline_delta/',
]
mypy_path = ["src", "."]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "tests",
    "tests.*",
]
check_untyped_defs = false
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
warn_return_any = false
warn_unused_ignores = false
disable_error_code = [
    "index",
    "operator",
    "type-arg",
    "attr-defined",
    "no-any-return",
    "assignment",
    "arg-type",
    "override",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not network and not loomweave_e2e and not legis_e2e and not filigree_e2e and not rust_e2e and not loomweave_drift and not sei_drift and not warpline_e2e and not reason_vocab_drift and not filigree_token_drift and not worklist_drift and not legis_scan_artifact_drift'"
markers = [
    "network: tests that need network (live OpenRouter judge e2e — SP5)",
    "loomweave_e2e: tests that need a real `loomweave serve` binary (SP9 round-trip)",
    "legis_e2e: tests that need a real `legis` server (Track 5 intake round-trip)",
    "filigree_e2e: tests that need a real Filigree with the promote route (WS-A2 round-trip)",
    "rust_e2e: live `wardline scan --lang rust` CLI subprocess over the .rs corpus (WP6)",
    "loomweave_drift: live recheck of the vendored Rust qualname corpus against the sibling loomweave checkout (release-gate drift alarm)",
    "sei_drift: live recheck of the vendored SEI conformance oracle against the sibling loomweave source fixture (release-gate drift alarm)",
    "warpline_e2e: live `warpline reverify | wardline scan --affected -` round-trip (delta scope; weekly/manual)",
    "reason_vocab_drift: live recheck of the vendored weft reason-vocabulary contract against the sibling weft hub source (release-gate drift alarm)",
    "filigree_token_drift: live substantive recheck of the vendored WEFT_FEDERATION_TOKEN auth contract against the sibling filigree source (release-gate drift alarm)",
    "worklist_drift: live recheck of the vendored warpline.reverify_worklist.v1 wire against the sibling warpline source (release-gate drift alarm)",
    "legis_scan_artifact_drift: live recheck of the vendored wardline->legis scan-artifact vector against the sibling legis source (release-gate drift alarm)",
]

[tool.coverage.run]
source = ["wardline"]
branch = true

[tool.coverage.report]
show_missing = true

[tool.importlinter]
root_package = "wardline"

# ENFORCING layering contracts (CI runs `lint-imports`, gating). They encode the
# load-bearing direction of the dependency graph: the analysis ENGINE and the gate
# POLICY are the depended-upon floor and must never reach up into orchestration,
# output, or federation. These are the two relations with zero legitimate exceptions.
#
# Tier model (bottom = most depended-upon): engine < policy < {federation, surface}.
#   engine     wardline.scanner.*, wardline.decorators.*, wardline.rust.*, and the
#              engine-floor core modules (finding, taints, identity, registry, ruleset,
#              config, paths, protocols, errors, discovery, frontends, ...).
#   policy     baseline, suppression, waivers, judged, finding_identity, delta, delta_scope.
#   federation sibling-tool integration: loomweave.*, filigree.*, weft_*, and core's
#              filigree_emit/filigree_issue/legis/federation_status/sei_resolution/delta_resolve.
#   surface    cli/mcp/install/lsp + orchestration & output core modules (run, baseline_ops,
#              attest, assure, dossier, emit, sarif, explain, agent_summary, ...).
#
# federation<->surface is deliberately NOT layered: the federation CLIENT modules are
# leaf-level (surfaces call them) while the federation INTEGRATION glue (weft_dossier,
# loomweave.write, filigree.dossier_client) legitimately COMPOSES surface modules
# (core.dossier, core.run). Forcing a federation<->surface order would flag that
# legitimate composition. Intra-tier cycles (which a forbidden contract cannot see) are
# guarded separately by tests/conformance/test_import_layering.py, which ALSO mirrors the
# full engine/policy tier-purity classification (so every engine-floor module — not just
# the source_modules listed below — is held pure) and checks every module named here still
# resolves (import-linter silently ignores a forbidden_modules entry that no longer exists).
#
# Note: these contracts forbid even TYPE_CHECKING-only upward imports (import-linter counts
# typing edges). Use ``from __future__ import annotations`` + string annotations in a lower
# tier rather than a guarded ``from wardline.core.run import ...``. The companion cycle test
# excludes TYPE_CHECKING edges (they are not runtime cycles), so that stricter-here behavior
# is intentional, not a divergence bug.
#
# History: wardline-9ec283d168 broke the original engine->attest inversion (project_resolver
# now imports ruleset_hash from core.ruleset); wardline-a0eaa7dd12 broke the residual
# core cycle (relocated the scan-running baseline ops to core.baseline_ops) and the scanner
# grammar<->rules cycle (extracted scanner.boundary_types), then promoted these to enforcing.

[[tool.importlinter.contracts]]
name = "Engine must not import policy, federation, or surface"
type = "forbidden"
source_modules = ["wardline.scanner", "wardline.decorators", "wardline.rust"]
forbidden_modules = [
    # policy
    "wardline.core.baseline",
    "wardline.core.suppression",
    "wardline.core.waivers",
    "wardline.core.judged",
    "wardline.core.finding_identity",
    "wardline.core.delta",
    "wardline.core.delta_scope",
    # federation
    "wardline.core.filigree_emit",
    "wardline.core.filigree_issue",
    "wardline.core.legis",
    "wardline.core.federation_status",
    "wardline.core.sei_resolution",
    "wardline.core.delta_resolve",
    "wardline.loomweave",
    "wardline.filigree",
    "wardline.weft_decorator_coverage",
    "wardline.weft_dossier",
    # surface
    "wardline.core.run",
    "wardline.core.baseline_ops",
    "wardline.core.attest",
    "wardline.core.attest_key",
    "wardline.core.assure",
    "wardline.core.dossier",
    "wardline.core.emit",
    "wardline.core.sarif",
    "wardline.core.explain",
    "wardline.core.agent_summary",
    "wardline.core.decorator_coverage",
    "wardline.core.judge",
    "wardline.core.judge_run",
    "wardline.core.triage",
    "wardline.core.rekey",
    "wardline.core.autofix",
    "wardline.core.scan_jobs",
    "wardline.core.scan_file_workflow",
    "wardline.cli",
    "wardline.mcp",
    "wardline.install",
    "wardline.lsp",
]

[[tool.importlinter.contracts]]
name = "Policy must not import federation or surface"
type = "forbidden"
source_modules = [
    "wardline.core.baseline",
    "wardline.core.suppression",
    "wardline.core.waivers",
    "wardline.core.judged",
    "wardline.core.finding_identity",
    "wardline.core.delta",
    "wardline.core.delta_scope",
]
forbidden_modules = [
    # federation
    "wardline.core.filigree_emit",
    "wardline.core.filigree_issue",
    "wardline.core.legis",
    "wardline.core.federation_status",
    "wardline.core.sei_resolution",
    "wardline.core.delta_resolve",
    "wardline.loomweave",
    "wardline.filigree",
    "wardline.weft_decorator_coverage",
    "wardline.weft_dossier",
    # surface
    "wardline.core.run",
    "wardline.core.baseline_ops",
    "wardline.core.attest",
    "wardline.core.attest_key",
    "wardline.core.assure",
    "wardline.core.dossier",
    "wardline.core.emit",
    "wardline.core.sarif",
    "wardline.core.explain",
    "wardline.core.agent_summary",
    "wardline.core.decorator_coverage",
    "wardline.core.judge",
    "wardline.core.judge_run",
    "wardline.core.triage",
    "wardline.core.rekey",
    "wardline.core.autofix",
    "wardline.core.scan_jobs",
    "wardline.core.scan_file_workflow",
    "wardline.cli",
    "wardline.mcp",
    "wardline.install",
    "wardline.lsp",
]
